[package]
name = "starfleet-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
starfleet = { path = "../starfleet" }
clap = { version = "3.0.0-beta.4", features = ["color"] } # Argument parsing for commands
shellwords = "1.1" # For parsing commands as if it were a real shell
termcolor = "1.1" # Combined with clap's dependency

# COMBINED WITH MAIN STARFLEET LIBRARY: 

parking_lot = { version = "0.11", features = ["serde"] } # Thread synchronization smart pointers that are fast



