[package]
name = "starfleet"
version = "0.1.0"
edition = "2018"


[dependencies]
starfleet-derive = { path = "../starfleet-derive" }
legion = "0.4" # Entity Component System 
serde = "1.0" # For serialzing and deserializing legion worlds
linkme = { version = "0.2", optional = true } # For collecting all component IDs for serialization
inventory = { version = "0.1", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.features]
default = ["linkme"]

[target.'cfg(not(any(target_os = "macos", target_os = "linux", target_os = "windows")))'.features]
default = ["inventory"]