[package]
name = "starfleet"
version = "0.1.0"
edition = "2018"
build = "build.rs" # Sets cfg flags depending on if linkme or inventory is used


[dependencies]
starfleet-derive = { path = "../starfleet-derive" }
legion = "0.4" # Entity Component System 
serde = "1.0" # Serialzing and deserializing legion worlds
crossbeam-channel = "0.5" # Event handling 
rmp-serde = "0.15" # Serializing / Deserializing game state to / from a save file

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
linkme = "0.2" # Component registration on specific platforms, doesn't use life before main

[target.'cfg(not(any(target_os = "macos", target_os = "linux", target_os = "windows")))'.dependencies]
inventory = "0.1" # For platforms not supporting linkme, use life before main to register components

[target.release]
lto = true
codegen-units = 1